RESOLVED FIXED267063
CSS Typed OM doesn't schedule mutation records
https://bugs.webkit.org/show_bug.cgi?id=267063
Summary CSS Typed OM doesn't schedule mutation records
Ryosuke Niwa
Reported 2024-01-03 13:41:55 PST
Created attachment 469282 [details] demo Open the attached file in Chrome vs. Safari. Safari fails to deliver mutation records when inline style is mutated via CSS Typed OM.
Attachments
demo (491 bytes, text/html)
2024-01-03 13:41 PST, Ryosuke Niwa
no flags
Radar WebKit Bug Importer
Comment 1 2024-01-10 13:42:23 PST
Ryosuke Niwa
Comment 2 2024-03-28 01:07:08 PDT
EWS
Comment 3 2024-03-28 10:10:55 PDT
Committed 276782@main (73bff01abebe): <https://commits.webkit.org/276782@main> Reviewed commits have been landed. Closing PR #26549 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.